<resources>
    <string name="app_name">Black Jack</string>
    <string name="take">Take</string>
    <string name="stop">Stop</string>
    <string name="lets_play">Поиграем?</string>
    <string name="_0">0</string>
    <string name="card">какая карта</string>
    <string name="play_again">Play Again</string>
    <string name="dealer_account">Dealer account:</string>
    <string name="pass">Pass</string>
    <string name="my_account">My account:</string>
</resources>