<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dealerStatus"
        android:layout_width="220dp"
        android:layout_height="120dp"
        android:background="@drawable/dealer_wait"
        app:layout_constraintBottom_toTopOf="@id/dealerCounter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textForDealerCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/dealer_account"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toStartOf="@id/dealerCounter"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dealerStatus" />

    <TextView
        android:id="@+id/dealerCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textForDealerCounter"
        app:layout_constraintTop_toBottomOf="@id/dealerStatus" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/counter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealerCounter">

    <ImageView
        android:id="@+id/resultGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/lets_play"
        android:text="@string/lets_play"
        android:textSize="20sp"
        android:visibility="visible"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/result"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/lets_play"
        android:textSize="20sp"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:background="@drawable/cross_eight"/>

    </FrameLayout>



    <TextView
        android:id="@+id/textForCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/my_account"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_goneMarginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@id/takeCard"
        app:layout_constraintEnd_toStartOf="@id/counter"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/takeCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textForCounter"
        app:layout_constraintTop_toBottomOf="@+id/frame" />

    <Button
        android:id="@+id/takeCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playAgain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stopPlay"
        app:layout_constraintTop_toBottomOf="@+id/counter" />

    <Button
        android:id="@+id/stopPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/takeCard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter" />


    <Button
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/takeCard"
        app:layout_constraintTop_toBottomOf="@+id/counter" />


</androidx.constraintlayout.widget.ConstraintLayout>